# rubiks-cube-cli

./: .gitignore  README.md  conftest.py  cube.py  main.py  pyproject.toml
tests/: test_cube.py
